objects/MFG_my360_Discrete__c.object
<CustomObject>
    <description>Custom object for individual hub use case, including Sales Hub, 1:1/Coaching, and Team Meetings</description>
    <fields>
        <fullName>Coaching_1_1_Quip__c</fullName>
        <label>Coaching/1-1 Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>my360s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Hub_Quip__c</fullName>
        <label>Sales Hub Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Team_Meeting_Quip__c</fullName>
        <label>Team Meeting Quip</label>
        <type>Url</type>
    </fields>
    <label>my360</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>my360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>my360</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>